# richards_sudoku

./: .gitignore  C.L.E.A.R. Lifecycle Table per Appendix.md  CI Enforcement Plan.md  Kakuro_Wikipedia_en.md  Ken Ken_Wikipedia_de.md  Killer_sudoku_Wikipedia_en.md  MIGRATIONS.md  README.md  RELEASE_CHECKLIST.md  RICHARDS_SUDOKU — FULL‑SYSTEM BETA TEST PACKAGE.md  Str8ts_ Wikipedia_en.md  Str8ts_Logo_250px-de.svg (1).md  Str8ts_Logo_250px-de.svg (2).md  Str8ts_Wikipedia_de.md  SukakuExplainer.md  _emit_templates_py.py  _gen_templates.py  _gen_templates_log.txt  _templates_output.json  codewords_sudoku_en.md  debug_str8ts.py  jigsaw_sudoku.md  kakuro_sudoku.md  kenken_sudoku.md  killer_sudoku.md  milestone_raodmap.md  prd.md  prd_checklist.md  pyproject.toml  richards_sudoku.code-workspace  solver.md  speckit.constitution  speckit.constitution.appendix.a.md  speckit.constitution.appendix.b.md  speckit.constitution.appendix.c.md  speckit.constitution.appendix.d.md  speckit.constitution.appendix.e.md  speckit.plan  speckit.specify  speckit.tasks
src/richards_sudoku/: __init__.py  main.py
src/richards_sudoku/controller/: __init__.py  game_controller.py
src/richards_sudoku/model/: __init__.py  schema.py  types.py
src/richards_sudoku/persistence/: __init__.py  (+1 more)
tests/: conftest.py  test_batch_j.py  test_codewords.py  test_difficulty_se.py  test_kakuro.py  test_kenken.py  test_model_types.py  test_one_to_25.py  test_performance.py  test_persistence.py  test_services.py  test_solver.py  test_text_format.py  test_ui_shell.py  test_variant_generators.py  test_wiring.py
(+19 files in other folders)
