[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "richards-sudoku"
version = "0.1.0"
description = "A Python + PyQt6 Sudoku application supporting multiple variants."
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[project.scripts]
richards-sudoku = "richards_sudoku.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
